--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/springSecurity
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-web-allow-others =  true
+spring.h2.console.enabled=true 
+spring.datasource.generate-unique-name=false
+
 
 spring.jpa.hibernate.ddl-auto=create
